added some details

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
                                 <div class="flex items-center gap-3">
-                                    <a href="#" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                    <a href="https://www.youtube.com/live/I8p-bEY_ago?si=x8IEtG_orHSGzAYg&t=1468" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
                                         <span>Video</span>
                                     </a>
@@ -138,7 +138,7 @@
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
                                 <div class="flex items-center gap-3">
-                                    <a href="#" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                    <a href="https://www.youtube.com/live/I8p-bEY_ago?si=SrBPrWISe1y_vdp4&t=4490" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
                                         <span>Video</span>
                                     </a>
@@ -171,11 +171,11 @@
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
                                 <div class="flex items-center gap-3">
-                                    <a href="#" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                    <a href="https://www.youtube.com/live/I8p-bEY_ago?si=lOao1oUOl4TY539V&t=8657" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
                                         <span>Video</span>
                                     </a>
-                                     <a href="#" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                     <a href="resources/slides/lodi.pdf" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                                         <span>Slide</span>
                                     </a>
@@ -204,7 +204,7 @@
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
                                 <div class="flex items-center gap-3">
-                                    <a href="#" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                    <a href="https://www.youtube.com/live/I8p-bEY_ago?si=YVVeXT_BeU8Xw6iN&t=12133" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
                                         <span>Video</span>
                                     </a>
@@ -231,19 +231,52 @@
                     <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
                         <div class="flex-grow">
                             <h3 class="text-xl font-semibold text-white mb-2">Tutto è testo: la shell per usare gli LLM</h3>
-                            <p class="text-slate-400 mb-2">A. Borruso & A. Nelson Mauro</p>
+                            <p class="text-slate-400 mb-2">Andrea Borruso (onData e Open Data Sicilia)</p>
                             <p class="text-slate-300 text-sm mb-6">Una riflessione pratica su come lavorare con i Large Language Models direttamente dalla linea di comando, l'ambiente ideale per manipolare il testo.</p>
                         </div>
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
                                 <div class="flex items-center gap-3">
-                                    <a href="#" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                    <a href="https://www.youtube.com/live/I8p-bEY_ago?si=7JR1k5yyuRDsK6-f&t=13388" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
                                         <span>Video</span>
                                     </a>
-                                     <a href="#" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                     <a href="https://aborruso.quarto.pub/tutto-testo/" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                                         <span>Slide</span>
+                                    </a>
+                                </div>
+                                <button class="expand-trigger flex items-center justify-center gap-1.5 text-sm text-sky-400 hover:text-sky-300 font-medium transition-colors py-2 flex-shrink-0">
+                                    <span>Approfondisci</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform chevron" viewBox="0 0 20 20" fill="currentColor">
+                                        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="expandable-content mt-4 space-y-2">
+                                <button class="modal-trigger w-full text-left px-3 py-2 text-sm bg-slate-700/50 hover:bg-slate-700 rounded-md text-slate-300 hover:text-white transition-colors" data-title="Riepilogo: LLM e Shell" data-content="Contenuto del riepilogo per LLM e Shell...">Leggi il riepilogo</button>
+                                <button class="modal-trigger w-full text-left px-3 py-2 text-sm bg-slate-700/50 hover:bg-slate-700 rounded-md text-slate-300 hover:text-white transition-colors" data-title="Trascrizione: LLM e Shell" data-content="Contenuto della trascrizione per LLM e Shell...">Leggi la trascrizione</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card Intervento 6 -->
+                    <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
+                        <div class="flex-grow">
+                            <h3 class="text-xl font-semibold text-white mb-2">Creare scraper in python senza saper usare python</h3>
+                            <p class="text-slate-400 mb-2">Andrea Nelson Mauro (onData e Open Data Sicilia)</p>
+                            <p class="text-slate-300 text-sm mb-6">Una riflessione pratica su come lavorare con i Large Language Models direttamente dalla linea di comando, l'ambiente ideale per manipolare il testo.</p>
+                        </div>
+                        <div class="mt-auto pt-4 border-t border-slate-700/60">
+                           <div class="flex flex-wrap items-center justify-between gap-3">
+                                <div class="flex items-center gap-3">
+                                    <a href="https://www.youtube.com/live/I8p-bEY_ago?si=M14tfvPG83LGY_Rl&t=15713" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
+                                        <span>Video</span>
+                                    </a>
+                                     <a href="https://github.com/datapitch-it/tables" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
+                                        <span>Repository</span>
                                     </a>
                                 </div>
                                 <button class="expand-trigger flex items-center justify-center gap-1.5 text-sm text-sky-400 hover:text-sky-300 font-medium transition-colors py-2 flex-shrink-0">
