--- a/index.html
+++ b/index.html
@@ -391,11 +391,12 @@
             <section class="mt-16">
                 <h2 class="text-3xl font-bold text-sky-300 border-b-2 border-sky-500/30 pb-3 mb-8">Risultati del Datathon</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+
                     <!-- Card Track 1 -->
                     <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
                         <div class="flex-grow">
                             <h3 class="text-xl font-semibold text-white mb-2">Track 1: Qualità dei Dati</h3>
-                            <p class="text-slate-300 text-sm mb-6">Il gruppo di lavoro si è concentrato sullo sviluppo di metodologie e script per analizzare e migliorare la qualità dei dati presenti nei portali open data, proponendo un framework di validazione automatica.</p>
+                            <p class="text-slate-300 text-sm mb-6">Lorem ipsum.</p>
                         </div>
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                             <div class="flex flex-wrap items-center justify-start gap-3">
@@ -406,7 +407,7 @@
                                     </svg>
                                     <span>Ascolta</span>
                                 </a>
-                                <button class="modal-trigger text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors flex items-center justify-center gap-2" data-title="Riepilogo: Track Qualità dei Dati" data-content="Il team ha sviluppato un set di script Python per la validazione dei dati tabulari, concentrandosi su coerenza, completezza e formattazione. È stato proposto un flusso di lavoro per integrare questi controlli nei processi di pubblicazione dei portali open data, migliorando l'affidabilità delle informazioni per gli utenti finali.">
+                                <button class="modal-trigger text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors flex items-center justify-center gap-2" data-title="Riepilogo: Track Qualità dei Dati" data-content="Lorem ipsum">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                       <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h8a2 2 0 012 2v12a1 1 0 110 2h-3a1 1 0 01-1-1v-2a1 1 0 00-1-1H9a1 1 0 00-1 1v2a1 1 0 01-1 1H4a1 1 0 110-2V4zm2 1a1 1 0 011-1h1a1 1 0 110 2H7a1 1 0 01-1-1zm0 4a1 1 0 011-1h1a1 1 0 110 2H7a1 1 0 01-1-1zm0 4a1 1 0 011-1h1a1 1 0 110 2H7a1 1 0 01-1-1z" clip-rule="evenodd" />
                                     </svg>
@@ -415,11 +416,12 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- Card Track 2 -->
                     <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
                         <div class="flex-grow">
                             <h3 class="text-xl font-semibold text-white mb-2">Track 2: Arricchimento Dati Acqua con WHOW</h3>
-                            <p class="text-slate-300 text-sm mb-6">Questo gruppo ha esplorato come arricchire i dataset esistenti sulle risorse idriche utilizzando l'ontologia Water Harmonized-Ontology (WHOW), per creare un grafo di conoscenza interrogabile e semanticamente ricco.</p>
+                            <p class="text-slate-300 text-sm mb-6">Questo gruppo ha esplorato lorem ipsum</p>
                         </div>
                          <div class="mt-auto pt-4 border-t border-slate-700/60">
                             <div class="flex flex-wrap items-center justify-start gap-3">
@@ -430,7 +432,7 @@
                                     </svg>
                                     <span>Ascolta</span>
                                 </a>
-                                <button class="modal-trigger text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors flex items-center justify-center gap-2" data-title="Riepilogo: Track Arricchimento Dati Acqua" data-content="Il lavoro si è basato sulla mappatura dei dati idrici siciliani con i concetti dell'ontologia WHOW. È stato prodotto un prototipo di knowledge graph che permette di effettuare query complesse, come l'individuazione di corpi idrici a rischio o la correlazione tra inquinanti e fonti.">
+                                <button class="modal-trigger text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors flex items-center justify-center gap-2" data-title="Riepilogo: Track Arricchimento Dati Acqua" data-content="Lorem ipsum">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                       <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h8a2 2 0 012 2v12a1 1 0 110 2h-3a1 1 0 01-1-1v-2a1 1 0 00-1-1H9a1 1 0 00-1 1v2a1 1 0 01-1 1H4a1 1 0 110-2V4zm2 1a1 1 0 011-1h1a1 1 0 110 2H7a1 1 0 01-1-1zm0 4a1 1 0 011-1h1a1 1 0 110 2H7a1 1 0 01-1-1zm0 4a1 1 0 011-1h1a1 1 0 110 2H7a1 1 0 01-1-1z" clip-rule="evenodd" />
                                     </svg>
