--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="mb-16 bg-slate-800/60 backdrop-blur-sm border border-blue-800/50 rounded-xl shadow-lg overflow-hidden">
             <div class="grid md:grid-cols-2 items-center">
                 <div class="p-8">
-                    <h2 class="text-3xl font-bold text-sky-300 mb-4">L'Evento in Sintesi: Rivedi Tutto</h2>
+                    <h2 class="text-3xl font-bold text-sky-300 mb-4">Rivedi tutto</h2>
                     <p class="text-slate-300 max-w-xl mb-6">
                         L'evento di Palermo ha rappresentato un'importante occasione di confronto sul legame tra open data e AI. Dalle policy nazionali di AgID alle applicazioni pratiche degli LLM, fino al Datathon collaborativo, rivivi due giorni intensi che hanno trasformato le idee in progetti concreti.
                     </p>
@@ -109,7 +109,7 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
                                         <span>Video</span>
                                     </a>
-                                     <a href="#" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                     <a href="resources/slides/rotundo.pdf" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                                         <span>Slide</span>
                                     </a>
@@ -146,7 +146,7 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
                                         <span>Video</span>
                                     </a>
-                                     <a href="#" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                     <a href="resources/slides/donnaloia.pdf" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                                         <span>Slide</span>
                                     </a>
@@ -326,32 +326,18 @@
                      <!-- Card Intervento 6 -->
                     <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
                         <div class="flex-grow">
-                            <h3 class="text-xl font-semibold text-white mb-2">Introduzione al Datathon</h3>
-                            <p class="text-slate-400 mb-2">D. Taibi (CNR) & A. Longo (UniSalento)</p>
-                            <p class="text-slate-300 text-sm mb-6">Presentazione delle sfide e degli obiettivi del Datathon, con un focus sui temi proposti e le modalità di partecipazione.</p>
+                            <h3 class="text-xl font-semibold text-white mb-2">Allenare il Futuro: Come i Data Hackathon Sviluppano Talenti e Idee Vincenti</h3>
+                            <p class="text-slate-400 mb-2">Antonella Longo (UniSalento)</p>
+                            <p class="text-slate-300 text-sm mb-6">Il DataLab di UniSalento.</p>
                         </div>
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
                                 <div class="flex items-center gap-3">
-                                    <a href="#" class="text-center bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z" /></svg>
-                                        <span>Video</span>
-                                    </a>
-                                     <a href="#" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                     <a href="resources/slides/longo.pdf" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                                         <span>Slide</span>
                                     </a>
                                 </div>
-                                <button class="expand-trigger flex items-center justify-center gap-1.5 text-sm text-sky-400 hover:text-sky-300 font-medium transition-colors py-2 flex-shrink-0">
-                                    <span>Approfondisci</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform chevron" viewBox="0 0 20 20" fill="currentColor">
-                                        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-                                    </svg>
-                                </button>
-                            </div>
-                            <div class="expandable-content mt-4 space-y-2">
-                                <button class="modal-trigger w-full text-left px-3 py-2 text-sm bg-slate-700/50 hover:bg-slate-700 rounded-md text-slate-300 hover:text-white transition-colors" data-title="Riepilogo: Intro Datathon" data-content="Contenuto del riepilogo per l'introduzione al Datathon...">Leggi il riepilogo</button>
-                                <button class="modal-trigger w-full text-left px-3 py-2 text-sm bg-slate-700/50 hover:bg-slate-700 rounded-md text-slate-300 hover:text-white transition-colors" data-title="Trascrizione: Intro Datathon" data-content="Contenuto della trascrizione per l'introduzione al Datathon...">Leggi la trascrizione</button>
                             </div>
                         </div>
                     </div>
@@ -359,9 +345,9 @@
                     <!-- Card Intervento 7 -->
                      <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
                         <div class="flex-grow">
-                            <h3 class="text-xl font-semibold text-white mb-2">LidoLink: AI per migliorare il turismo</h3>
+                            <h3 class="text-xl font-semibold text-white mb-2">LidoLink e il Futuro del Turismo</h3>
                             <p class="text-slate-400 mb-2">Showbik Showmma</p>
-                            <p class="text-slate-300 text-sm mb-6">Presentazione di un progetto che sfrutta l’intelligenza artificiale per migliorare in tempo reale l’esperienza turistica.</p>
+                            <p class="text-slate-300 text-sm mb-6">L'AI che Trasforma l’Esperienza di Viaggio in Tempo Reale</p>
                         </div>
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
@@ -371,16 +357,6 @@
                                         <span>Slide</span>
                                     </a>
                                 </div>
-                                <button class="expand-trigger flex items-center justify-center gap-1.5 text-sm text-sky-400 hover:text-sky-300 font-medium transition-colors py-2 flex-shrink-0">
-                                    <span>Approfondisci</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform chevron" viewBox="0 0 20 20" fill="currentColor">
-                                        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-                                    </svg>
-                                </button>
-                            </div>
-                            <div class="expandable-content mt-4 space-y-2">
-                                <button class="modal-trigger w-full text-left px-3 py-2 text-sm bg-slate-700/50 hover:bg-slate-700 rounded-md text-slate-300 hover:text-white transition-colors" data-title="Riepilogo: LidoLink" data-content="Contenuto del riepilogo per LidoLink...">Leggi il riepilogo</button>
-                                <button class="modal-trigger w-full text-left px-3 py-2 text-sm bg-slate-700/50 hover:bg-slate-700 rounded-md text-slate-300 hover:text-white transition-colors" data-title="Trascrizione: LidoLink" data-content="Contenuto della trascrizione per LidoLink...">Leggi la trascrizione</button>
                             </div>
                         </div>
                     </div>
