--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <div class="flex-grow">
                             <h3 class="text-xl font-semibold text-white mb-2">Creare scraper in python senza saper usare python</h3>
                             <p class="text-slate-400 mb-2">Andrea Nelson Mauro (onData e Open Data Sicilia)</p>
-                            <p class="text-slate-300 text-sm mb-6">Costruire scraper sfruttando LLM</p>
+                            <p class="text-slate-300 text-sm mb-6">L'intervento illustra come sfruttare i Large Language Models (LLM) per creare scraper in Python e automatizzare l'estrazione dati, anche per chi non sa programmare.</p>
                         </div>
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
