improve player design

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ Viva il riuso, ma soprattutto, viva il Borruso!">Leggi la trascrizione</button>
                     <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
                         <div class="flex-grow">
                             <h3 class="text-xl font-semibold text-white mb-2">Dati sulle acque: le sfide per la salute e l'ambiente (Track 1)</h3>
-                            <p class="text-slate-300 text-sm mb-6">Esplorazione delle possibilità di arricchimento dei dati idrici attraverso l'integrazione con WHOW.</p>
+                            <p class="text-slate-300 text-sm mb-6">Per una gestione più efficace e trasparente dei dati sulla qualità dell'acqua. Esplorazione delle possibilità di arricchimento dei dati idrici attraverso l'integrazione con WHOW.</p>
                         </div>
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                             <div class="flex flex-col gap-4">
@@ -829,7 +829,7 @@ Viva il riuso, ma soprattutto, viva il Borruso!">Leggi la trascrizione</button>
                     <div class="bg-slate-800/50 backdrop-blur-sm border border-blue-800/50 rounded-xl p-6 flex flex-col justify-between shadow-lg hover:shadow-sky-500/20 transition-all duration-300">
                         <div class="flex-grow">
                             <h3 class="text-xl font-semibold text-white mb-2">Qualità dei dati: le sfide e le potenzialità di strumenti intelligenti (Track 2)</h3>
-                            <p class="text-slate-300 text-sm mb-6">Risultati del gruppo di lavoro sulla qualità dei dati.</p>
+                            <p class="text-slate-300 text-sm mb-6">Risultati del gruppo di lavoro sulla qualità dei dati. Fondamentale un sistema di monitoraggio centrale della qualità del dato.</p>
                         </div>
                         <div class="mt-auto pt-4 border-t border-slate-700/60">
                             <div class="flex flex-col gap-4">
