--- a/index.html
+++ b/index.html
@@ -74,17 +74,18 @@
             margin-right: 10px;
         }        .custom-audio-player::-webkit-media-controls-current-time-display,
         .custom-audio-player::-webkit-media-controls-time-remaining-display {
-            color: #ffffff;
+            color: #1e293b;
             font-size: 13px;
             font-weight: 700;
             font-family: 'Inter', sans-serif;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 1);
-            background: #1e293b;
+            text-shadow: none;
+            background: transparent;
             padding: 4px 8px;
-            border-radius: 8px;
+            border-radius: 0;
             min-width: 45px;
             text-align: center;
-            border: 2px solid #38bdf8;            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+            border: none;
+            box-shadow: none;
         }
     </style>
 </head>
