improve player design

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
             overflow: hidden;
             transition: max-height 0.5s ease-in-out;
         }
-        
-        /* Stili per il player audio personalizzato */        .custom-audio-player {
+          /* Stili per il player audio personalizzato */        .custom-audio-player {
             width: 100%;
             height: 60px;
-            background: linear-gradient(135deg, #475569 0%, #334155 100%);
-            border-radius: 8px;
+            background: transparent;
+            border-radius: 0;
             padding: 8px 12px;
-            border: 1px solid rgba(56, 189, 248, 0.3);
+            border: none;
             overflow: visible;
         }
         
