improve footer copy

--- a/index.html
+++ b/index.html
@@ -750,14 +750,13 @@ Viva il riuso, ma soprattutto, viva il Borruso!">Leggi la trascrizione</button>
                             <h3 class="text-xl font-semibold text-white mb-2">Allenare il Futuro: Come i Data Hackathon Sviluppano Talenti e Idee Vincenti</h3>
                             <p class="text-slate-400 mb-2">Antonella Longo (UniSalento)</p>
                             <p class="text-slate-300 text-sm mb-6">Il DataLab di UniSalento.</p>
-                        </div>
-                        <div class="mt-auto pt-4 border-t border-slate-700/60">
+                        </div>                        <div class="mt-auto pt-4 border-t border-slate-700/60">
                            <div class="flex flex-wrap items-center justify-between gap-3">
                                 <div class="flex items-center gap-3">
-                                     <a href="resources/slides/longo.pdf" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 px-3 rounded-lg transition-colors flex items-center justify-center gap-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
-                                        <span>Slide</span>
-                                    </a>
+                                     <div class="text-center bg-amber-600/70 text-white font-semibold py-2 px-3 rounded-lg flex items-center justify-center gap-2 cursor-not-allowed">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" /></svg>
+                                        <span>Slide non ancora disponibili</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -890,7 +889,7 @@ Viva il riuso, ma soprattutto, viva il Borruso!">Leggi la trascrizione</button>
         <!-- Footer -->
         <footer class="text-center mt-20 pt-10 border-t border-slate-700">
             <p class="text-slate-400">
-                Evento organizzato nell'ambito del progetto europeo <strong class="font-semibold text-slate-300">SMERALD</strong>.
+                Evento organizzato dall' <a href="https://www.itd.cnr.it/"> ITD-CNR</a> e dalla  <a href="https://opendatasicilia.it/">community Open Data Sicilia</a> nell'ambito del progetto europeo <strong class="font-semibold text-slate-300">SMERALD</strong>.
             </p>
             <p class="text-sm text-slate-500 mt-2">
                 2023-1-IT01-KA220-VET-000151990
